Configured eureka server and registered all services and config server set up for centralized configurations.

--- a/java-services/config-server/src/main/resources/application.properties
+++ b/java-services/config-server/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=config-server
+server.port=8888
+
+#properties for config server
+spring.cloud.config.server.git.uri=https://github.com/LoadingElii/game-predictor-config.git
+
+#properties for eureka client
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
