--- a/java-services/member-service/pom.xml
+++ b/java-services/member-service/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.loadingeli</groupId>
-	<artifactId>user-service</artifactId>
+	<artifactId>member-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>user-service</name>
+	<name>member-service</name>
 	<description>game service for NFl games</description>
 	<url/>
 	<licenses>
