added prometheus to all spring boot microservices for improved observability

--- a/java-services/config-server/src/main/resources/application.properties
+++ b/java-services/config-server/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 spring.application.name=config-server
 server.port=8888
 
+#properties for spring actuator
+management.endpoints.web.exposure.include=health,info,prometheus
+
 #properties for config server
 spring.cloud.config.server.git.uri=https://github.com/LoadingElii/game-predictor-config.git
 
