--- a/java-services/eureka-server/src/main/resources/application.properties
+++ b/java-services/eureka-server/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.application.name=eureka-server
 server.port=8761
 
+#properties for spring actuator
+management.endpoints.web.exposure.include=health,info,prometheus
 
 #properties for eureka server
 eureka.client.register-with-eureka=false
