--- a/java-services/api-gateway/Dockerfile
+++ b/java-services/api-gateway/Dockerfile
@@ -9,8 +9,7 @@ RUN mvn clean package -DskipTests
 #Stage 2: Runtime
 FROM openjdk:17-slim
 WORKDIR /app/services/api-gateway
-ARG ARTIFACT_NAME
-ENV ARTIFACT_NAME=${ARTIFACT_NAME}
-COPY --from=build /app/services/${ARTIFACT_NAME}/target/*.jar app.jar
+
+COPY --from=builder /app/services/api-gateway/target/*.jar app.jar
 EXPOSE 8090
 ENTRYPOINT ["java", "-jar", "app.jar"]
